<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.settings">

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_blue3"
        android:text="@string/enableddkeys"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_blue3"
        android:text="@string/chooseddkeys"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_blue_circle"
        android:text="@string/testddkeys"
        android:textColor="#fff" />


</LinearLayout>